<resources>
    <string name="app_name">CampusThrifts</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="h_login">Log In</string>
    <string name="h_signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="log_out">LOGOUT</string>
    <string name="log_in">LOGIN</string>
    <string name="or">Or sign in with</string>
    <string name="sign_up">SIGNUP</string>
    <string name="already_have_account">Already have an account? Login here</string>
    <string name="do_not_have_account">Do not have an account? Sign up here</string>
    <string name="email">Email</string>
    <string name="username">User Name</string>
    <string name="student_id">Student Id</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About Us</string>
    <string name="title_logout">Logout</string>
    <string name="home_title">Home</string>
    <string name="cart_icon_desc">Cart icon</string>
    <string name="profile_icon_desc">Profile icon</string>
    <string name="banner_image_desc">Banner image</string>
    <string name="new_collections">New Collections</string>
    <string name="popular_this_week">Popular This Week</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="hamburger_icon_desc">Menu</string>
    <string name="discover_header">Discover</string>
    <string name="new_collections_header">New Collections</string>
    <string name="welcome_text">Welcome</string>
    <string name="discount_text">Get major discounts today</string>
    <string name="buy_now">Buy Now</string>
    <string name="popular_items_header">Popular this week</string>
    <string name="popular_items_arrow_desc">View more popular items</string>
    <string name="categories_header">Categories</string>
    <string name="categories_arrow_desc">View more categories</string>
    <string name="item_image_desc">Image of the favorite item</string>
    <string name="all_button">All</string>
    <string name="title_add_item">Add Item</string>
    <string name="title_favorite_item">Favorites</string>
    <string name="item_price_placeholder">$%1$d</string>

    <string name="client_id">913089159482-au4jrja138iqb1b4pntvbq0rgpua80fa.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Home fragment</string>
    <string name="hello_search_fragment">Search fragment</string>
    <string name="hello_cart_fragment">Cart fragment</string>
    <string name="hello_profile_fragment">Profile fragment</string>
    <string name="hello_chat_fragment">Chat fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_dashboard_fragment">Dashboard fragment</string>
    <string name="hello_settings_fragment">Settings fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_about_fragment">About fragment</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="back_button_desc">Back Button</string>
    <string name="profile_image_desc">Profile Image</string>
    <string name="camera_button_desc">Camera Button</string>
    <string name="last_name_hint">Last Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="student_id_hint">Student ID #</string>
    <string name="save_changes">Save Changes</string>
    <string name="phone_number">Phone Number</string>

    <string name="phone_number_hint">Phone Number</string>
    <string name="remove_image">Remove Image</string>

    <string name="default_notification_channel_id">chat_messages</string>
    <string name="msg_token_fmt">FCM Registration token: %1$s</string>

    <string name="type_message_hint">Type a message...</string>
    <string name="send_button">Send</string>

    <string name="additional_field_hint">Additional Field</string>
    <string name="gender_label">Gender</string>
    <string name="male_option">Male</string>
    <string name="female_option">Female</string>
    <string name="other_option">Other</string>

    <string name="product_image">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price: $%.2f</string>
    <string name="edit">Edit</string>
    <string name="delete_product">Delete Product</string>
    <string name="listed_products">Listed Products</string>
    <string name="add_product">Add Product</string>
    <string name="add_a_new_product">Add a new product</string>
    <string name="dashboard">Dashboard</string>
    <string name="edit_product">Edit Product</string>
    <string name="save">Save</string>
    <string name="selected_image">Selected Image</string>
    <string name="select_product_image">Select Product Image</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="enter_product_price">Enter Product Price</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="view_details">View Details</string>
    <string name="product_quantity">Quantity: %d</string>
    <string name="back">Back</string>
    <string name="product_description">Product Description</string>
    <string name="product_details">Product details</string>
    <string name="category">Category</string>
    <string name="h_addproduct">Product\n</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>

</resources>