<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/title_home"
            android:icon="@drawable/ic_home" />

        <item
            android:id="@+id/nav_profile"
            android:title="@string/title_profile"
            android:icon="@drawable/ic_person" />

        <item
            android:id="@+id/nav_chat"
            android:title="@string/title_chat"
            android:icon="@drawable/ic_chat" />

        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/title_dashboard"
            android:icon="@drawable/ic_dashboard" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/title_settings"
            android:icon="@drawable/ic_settings" />

        <item
            android:id="@+id/nav_about"
            android:title="@string/title_about"
            android:icon="@drawable/ic_info" />

    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/title_logout"
                android:icon="@drawable/ic_exit" />
        </menu>
    </item>

</menu>