<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

    <!-- Product Header  -->
    <TextView
        android:id="@+id/h_addproduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/h_addproduct"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etProductName" />

    <!-- Product Name Field -->
    <EditText
        android:id="@+id/etProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_product_name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/h_addproduct"
        android:padding="16dp" />

    <!-- Product Price Field -->
    <EditText
        android:id="@+id/etProductPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_product_price"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etProductName"
        android:padding="16dp" />

    <EditText
        android:id="@+id/etProductQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etProductPrice"
        android:padding="16dp" />

    <EditText
        android:id="@+id/etProductDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etProductQuantity"
        android:padding="16dp" />

    <!-- Product Category Dropdown -->
    <Spinner
        android:id="@+id/productCategorySpinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/etProductDescription"/>

    <!-- Image Selection Button -->
    <Button
        android:id="@+id/btnSelectImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/select_product_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productCategorySpinner"
        />

    <!-- Image Preview (optional) -->
    <ImageView
        android:id="@+id/ivSelectedImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/btnSelectImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/selected_image"
        android:src="@drawable/ic_placeholder_image"
        android:layout_centerHorizontal="true" />

    <!-- Upload Button -->
    <Button
        android:id="@+id/btnUploadProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSelectedImage"
        />

</androidx.constraintlayout.widget.ConstraintLayout>